ISSUE:  Redmine #670  PURPOSE:  Transaaction Styles and Accessibility Checking  DESCRIPTION:   Wave web aim accesibility checker -- contrast fix.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -987,6 +987,7 @@ table.inputTable tr {
 .input-group-append {}
 .tab-card-main {
 	background-color: #f5f5f5;
+	background-color: #f9f9f9;
 }
 .tab-card {
 	border: 1px solid #eee;
